--- a/CEDG-full/lib.vcxproj
+++ b/CEDG-full/lib.vcxproj
@@ -23,19 +23,19 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Template|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v120_xp</PlatformToolset>
+    <PlatformToolset>Intel C++ Compiler XE 15.0</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -53,17 +53,15 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>..\Release\</OutDir>
-    <IntDir>..\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\sparsehash\windows;..\vflib2\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\vflib_cilk\include;$(IncludePath)</IncludePath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules />
     <CodeAnalysisRuleAssemblies />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\vflib2\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\vflib_cilk\include;$(IncludePath)</IncludePath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules />
     <CodeAnalysisRuleAssemblies />
@@ -103,7 +101,6 @@
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Console</SubSystem>
-      <OutputFile>../Release/lib.exe</OutputFile>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <GenerateMapFile>true</GenerateMapFile>
@@ -165,24 +162,18 @@
     <ClCompile Include="..\common\PEFuncs.cpp" />
     <ClCompile Include="..\common\shared.cpp" />
     <ClCompile Include="..\common\utility.cpp" />
-    <ClCompile Include="..\vflib2\src2\argedit.cpp" />
-    <ClCompile Include="..\vflib2\src2\argloader.cpp" />
-    <ClCompile Include="..\vflib2\src2\argraph.cpp" />
-    <ClCompile Include="..\vflib2\src2\error.cpp" />
-    <ClCompile Include="..\vflib2\src2\gene.cpp" />
-    <ClCompile Include="..\vflib2\src2\gene_mesh.cpp" />
-    <ClCompile Include="..\vflib2\src2\match.cpp" />
-    <ClCompile Include="..\vflib2\src2\sd_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\sortnodes.cpp" />
-    <ClCompile Include="..\vflib2\src2\ull_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\ull_sub_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf2_mono_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf2_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf2_sub_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf_mono_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\vf_sub_state.cpp" />
-    <ClCompile Include="..\vflib2\src2\xsubgraph.cpp" />
+    <ClCompile Include="..\vflib_cilk\src\argedit.cc" />
+    <ClCompile Include="..\vflib_cilk\src\argloader.cc" />
+    <ClCompile Include="..\vflib_cilk\src\argraph.cc" />
+    <ClCompile Include="..\vflib_cilk\src\error.cc" />
+    <ClCompile Include="..\vflib_cilk\src\gene.cc" />
+    <ClCompile Include="..\vflib_cilk\src\gene_mesh.cc" />
+    <ClCompile Include="..\vflib_cilk\src\match.cc" />
+    <ClCompile Include="..\vflib_cilk\src\sortnodes.cc" />
+    <ClCompile Include="..\vflib_cilk\src\vf2_bitset_sub_state.cc" />
+    <ClCompile Include="..\vflib_cilk\src\vf2_map_sub_state.cc" />
+    <ClCompile Include="..\vflib_cilk\src\vf2_sub_state.cc" />
+    <ClCompile Include="..\vflib_cilk\src\xsubgraph.cc" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -201,7 +192,22 @@
     <ClInclude Include="..\common\PEFuncs.h" />
     <ClInclude Include="..\common\shared.h" />
     <ClInclude Include="..\common\utility.h" />
-    <ClInclude Include="..\vflib2\src2\sortnodes.h" />
+    <ClInclude Include="..\vflib_cilk\include\allocpool.h" />
+    <ClInclude Include="..\vflib_cilk\include\argedit.h" />
+    <ClInclude Include="..\vflib_cilk\include\argloader.h" />
+    <ClInclude Include="..\vflib_cilk\include\argraph.h" />
+    <ClInclude Include="..\vflib_cilk\include\dict.h" />
+    <ClInclude Include="..\vflib_cilk\include\error.h" />
+    <ClInclude Include="..\vflib_cilk\include\gene.h" />
+    <ClInclude Include="..\vflib_cilk\include\gene_mesh.h" />
+    <ClInclude Include="..\vflib_cilk\include\match.h" />
+    <ClInclude Include="..\vflib_cilk\include\state.h" />
+    <ClInclude Include="..\vflib_cilk\include\stat_obj.h" />
+    <ClInclude Include="..\vflib_cilk\include\vf2_bitset_sub_state.h" />
+    <ClInclude Include="..\vflib_cilk\include\vf2_map_sub_state.h" />
+    <ClInclude Include="..\vflib_cilk\include\vf2_sub_state.h" />
+    <ClInclude Include="..\vflib_cilk\include\xsubgraph.h" />
+    <ClInclude Include="..\vflib_cilk\src\sortnodes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
