--- a/CEDG-full/lib.vcxproj.filters
+++ b/CEDG-full/lib.vcxproj.filters
@@ -5,9 +5,6 @@
       <UniqueIdentifier>{8283a89a-14ea-404e-931e-e3bb7a2d9c5a}</UniqueIdentifier>
       <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
     </Filter>
-    <Filter Include="Source Files\vflib">
-      <UniqueIdentifier>{9b8b2e19-e816-4760-bf9f-88f83a24754e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{9bb3446a-ada0-496e-a753-c37d797b2879}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
@@ -16,62 +13,14 @@
       <UniqueIdentifier>{9bfa8090-5430-472a-94ab-33dc737c57ec}</UniqueIdentifier>
       <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
+    <Filter Include="Source Files\vflib">
+      <UniqueIdentifier>{91aaa9fa-bba1-4811-a556-a4ed3a8ffd7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\vflib">
+      <UniqueIdentifier>{31a3d845-7145-4a87-87b9-aff035cd560d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\vflib2\src2\argedit.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\argloader.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\argraph.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\error.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\gene.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\gene_mesh.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\match.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\sd_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\sortnodes.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\ull_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\ull_sub_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf2_mono_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf2_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf2_sub_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf_mono_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\vf_sub_state.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\vflib2\src2\xsubgraph.cpp">
-      <Filter>Source Files\vflib</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -114,11 +63,44 @@
     <ClCompile Include="..\common\InstructionComparator2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\argloader.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\argraph.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\error.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\gene.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\gene_mesh.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\match.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\sortnodes.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\vf2_bitset_sub_state.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\vf2_map_sub_state.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\vf2_sub_state.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\xsubgraph.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vflib_cilk\src\argedit.cc">
+      <Filter>Source Files\vflib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\vflib2\src2\sortnodes.h">
-      <Filter>Source Files\vflib</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\shared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -163,6 +145,54 @@
     </ClInclude>
     <ClInclude Include="..\common\PEFuncs.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\src\sortnodes.h">
+      <Filter>Source Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\allocpool.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\argedit.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\argloader.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\argraph.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\dict.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\error.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\gene.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\gene_mesh.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\match.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\stat_obj.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\state.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\vf2_bitset_sub_state.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\vf2_map_sub_state.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\vf2_sub_state.h">
+      <Filter>Header Files\vflib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vflib_cilk\include\xsubgraph.h">
+      <Filter>Header Files\vflib</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
