--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.sln.docstates
 
 # Build results
+lib___Win32_Debug/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -58,6 +59,7 @@ dlldata.c
 *.pidb
 *.svclog
 *.scc
+*.fdb
 
 # Chutzpah Test files
 _Chutzpah*
